# Benchmarking-de-Clasificaci-n-de-Patrones-mediante-Regresi-n-Logistica

./: .gitignore  CMakeLists.txt  Informe_Tecnico_Redes_Neuronales.docx  Proyecto_Redes_Neuronales_MNIST.ipynb  README.md  export_csv.py  logistic_regression.pro  main.cpp
docs/: Informe_Tecnico_Redes_Neuronales.docx  metricas_finales.md
notebooks/: Proyecto_Redes_Neuronales_MNIST.ipynb
scripts/: build_and_run_cpp.ps1  export_csv.py
src/: main.cpp
